Se agregaron los texto al proyecto

--- a/index.html
+++ b/index.html
@@ -2,11 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sitio Freelancer</title>
+    <title>Diseñador Freelancer</title>
 </head>
 <body>
-    <H1>Hola Mundo</H1>
+    <h1>Eduardo May Freelancer</h1>
+
+    <h2>Diseño y Desarrollo Web Freelancer</h2>
+
+    <p>Mérida, Yucatán</p>
+
+    <h2>Mis Servicios</h2>
+
+    <h3>Diseño Web</h3>
+    <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda ad ducimus odio aperiam, tempora repellat, impedit ipsam voluptates delectus enim omnis cum quis dolore laudantium? Molestiae quasi laboriosam aut voluptatem!</p>
+
+    <h3>Aplicaciones Web</h3>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda ad ducimus odio aperiam, tempora repellat, impedit ipsam voluptates delectus enim omnis cum quis dolore laudantium? Molestiae quasi laboriosam aut voluptatem!</p>
+
+    <h3>E-Commerce</h3>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda ad ducimus odio aperiam, tempora repellat, impedit ipsam voluptates delectus enim omnis cum quis dolore laudantium? Molestiae quasi laboriosam aut voluptatem!</p>
+
+    <h2>Contacto</h2>
+
+    <p>Todos los derechos reservados. Eduardo May Freelancer</p>
+
+
 </body>
 </html>
