Se agrego la hoja de estilos

--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diseñador Freelancer</title>
-    <style>
-       h1{
-        text-align: center;
-       }
-    </style>
+    <!--Carga la hoja de estilos lo más rapido que pueda como una hoja de stylo-->
+    <link rel="preload" href="css/style.css" as="style">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>    
-        <h1>Eduardo May Freelancer</h1>
+        <h1>Eduardo May <span>Freelancer</span></h1>
     </header>
 
 
