--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>    
-        <h1>Eduardo May <span>Freelancer</span></h1>
+        <h1 class="titulo">Eduardo May <span>Freelancer</span></h1>
     </header>
 
 
@@ -21,10 +21,8 @@
         <a href="#">Contacto</a>
     </nav>
 
-    <img src="img/hero.jpg" alt="">
-
     <section>
-        <h2>Diseño y Desarrollo Web Freelancer</h2>
+        <h2 class="titulo">Diseño y Desarrollo Web Freelancer</h2>
     
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="88" height="88" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffc107" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
