Termino la barra de navegacion

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diseñador Freelancer</title>
+    <!-- Normalice siempre debe de ser la libreria que agreges primero a tus proyectos -->
+    <link rel="preload" href="css/normalize.css" as="style">
+    <link rel="stylesheet" href="css/normalize.css">
+    <!-- Se agregan primero  las fuentes externar y despues tu hoja css -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Krub:wght@400;700&display=swap" rel="stylesheet">
     <!--Carga la hoja de estilos lo más rapido que pueda como una hoja de stylo-->
     <link rel="preload" href="css/style.css" as="style">
     <link rel="stylesheet" href="css/style.css">
@@ -13,13 +20,14 @@
         <h1 class="titulo">Eduardo May <span>Freelancer</span></h1>
     </header>
 
-
-    <nav>
-        <a href="#">Inicio</a>
-        <a href="#">Sobre Mí</a>
-        <a href=""">Clientes</a>
-        <a href="#">Contacto</a>
-    </nav>
+    <div class="nav-bg">
+        <nav class="navegacion-principal contenedor">
+            <a href="#">Inicio</a>
+            <a href="#">Sobre Mí</a>
+            <a href=""">Clientes</a>
+            <a href="#">Contacto</a>
+        </nav>
+    </div>
 
     <section>
         <h2 class="titulo">Diseño y Desarrollo Web Freelancer</h2>
